--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gpt",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start:dev": "npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
     "ts-node": "^10.9.1",
