--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "axios": "^1.2.2",
     "express": "^4.18.2",
+    "html-to-latex": "^0.8.0",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
     "ts-node": "^10.9.1",
