--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.1",
     "@mui/styles": "^5.11.7",
+    "@react-pdf/renderer": "^3.1.5",
     "@types/dompurify": "^2.4.0",
     "@types/lodash": "^4.14.191",
+    "axios": "^1.3.3",
     "dompurify": "^2.4.3",
     "lodash": "^4.17.21",
     "marked": "^4.2.12",
